--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "SCSS"
+          "styleext": "scss"
         }
       },
       "architect": {
@@ -76,7 +76,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.SCSS"
+              "src/styles.SCSS",
             ],
             "scripts": [],
             "assets": [
